There has been a bug regarding castling, took a day to solve it. i still left testing staff but overall i think it works.