@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.nio.file.*;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.stream.Collectors;
 
 public class ErrorReporter {
     private static final DateTimeFormatter TIMESTAMP_FORMAT =
@@ -23,6 +24,7 @@ public class ErrorReporter {
     private void initializeLogFile() {
         try {
             if (!Files.exists(logFile)) {
+                Files.createDirectories(logFile.getParent());
                 Files.createFile(logFile);
                 logSystemMessage("Initialized chess validation error log");
             }
@@ -34,53 +36,59 @@ public class ErrorReporter {
     public void logReport(ErrorReport report) {
         if (!report.hasErrors()) return;
 
-        StringBuilder content = new StringBuilder();
-        content.append(createLogHeader(report.getGameId()));
+        try {
+            String logEntry = createLogEntry(report);
+            Files.writeString(logFile, logEntry,
+                    StandardOpenOption.CREATE,
+                    StandardOpenOption.APPEND);
+        } catch (IOException e) {
+            System.err.println("Failed to write error report: " + e.getMessage());
+        }
+    }
 
-        for (ErrorReport.ChessError error : report.getErrors()) {
-            content.append(formatErrorEntry(error));
+    private String createLogEntry(ErrorReport report) {
+        StringBuilder sb = new StringBuilder();
+        sb.append(createLogHeader(report.getGameId()));
+
+        if (!report.hasErrors()) {
+            sb.append("  Game is valid\n");
+        } else {
+            report.getErrors().stream()
+                    .collect(Collectors.groupingBy(
+                            e -> e.isCritical() ? "Critical Errors" : "Warnings"))
+                    .forEach((category, errors) -> {
+                        sb.append("  ").append(category).append(":\n");
+                        errors.forEach(e -> sb.append("    - ").append(e.getMessage())
+                                .append(formatMoveContext(e)).append("\n"));
+                    });
         }
 
-        writeToLog(content.toString());
+        sb.append("-".repeat(80)).append("\n");
+        return sb.toString();
     }
-
-    public void logSystemMessage(String message) {
-        String entry = String.format("[%s] [SYSTEM] %s%n",
-                LocalDateTime.now().format(TIMESTAMP_FORMAT),
-                message);
-        writeToLog(entry);
-    }
-
     private String createLogHeader(String gameId) {
-        return String.format("%n[%s] Game: %s%n",
+        return String.format("[%s] Game: %s%n",
                 LocalDateTime.now().format(TIMESTAMP_FORMAT),
                 gameId);
     }
 
-    private String formatErrorEntry(ErrorReport.ChessError error) {
-        StringBuilder sb = new StringBuilder();
-        sb.append("  ").append(error.getClass().getSimpleName())
-                .append(": ").append(error.getMessage());
-
-        if (error.getMoveNumber() > 0) {
-            sb.append(" [Move ").append(error.getMoveNumber());
-            if (error.getMoveText() != null) {
-                sb.append(": ").append(error.getMoveText());
-            }
-            sb.append("]");
-        }
-        sb.append("%n");
-
-        return sb.toString();
+    private String formatMoveContext(ErrorReport.ChessError error) {
+        if (error.getMoveNumber() <= 0) return "";
+        return String.format(" (Move %d%s)",
+                error.getMoveNumber(),
+                error.getMoveText() != null ? ": " + error.getMoveText() : "");
     }
 
-    private void writeToLog(String content) {
+    public void logSystemMessage(String message) {
         try {
-            Files.write(logFile, content.getBytes(),
+            String entry = String.format("[%s] [SYSTEM] %s%n",
+                    LocalDateTime.now().format(TIMESTAMP_FORMAT),
+                    message);
+            Files.writeString(logFile, entry,
                     StandardOpenOption.CREATE,
                     StandardOpenOption.APPEND);
         } catch (IOException e) {
-            System.err.println("Failed to write to error log: " + e.getMessage());
+            System.err.println("Failed to log system message: " + e.getMessage());
         }
     }
 
